2012-03-27  Dave Tu  <dtu@chromium.org>

        Show image diffs for gpu_tests on flakiness dashboard
        https://bugs.webkit.org/show_bug.cgi?id=81848

        Reviewed by Ojan Vafai.

        Add a new results layout for gpu_tests that pulls the image diffs in
        addition to the text output. Also add new gpu_tests builders.

        * Tools/TestResultServer/static-dashboards/builders.js: Update
        gpu_tests builders.
        * Tools/TestResultServer/static-dashboards/dashboard_base.js: Add a
        function to check for GPU test type.
        * Tools/TestResultServer/static-dashboards/flakiness_dashboard.html:
        Add new GPU results layout.

2012-03-26  Ryosuke Niwa  <rniwa@webkit.org>

        Trigger a build on Chromium Linux boxes to see if clean builds succeed or not.

2012-03-26  Leo Yang  <leo.yang@torchmobile.com.cn>

        [BlackBerry] Skeleton code of AsyncFileSystemBlackBerry.cpp
        https://bugs.webkit.org/show_bug.cgi?id=82157

        Reviewed by Rob Buis.

        * Source/cmake/OptionsBlackBerry.cmake: Turn on ENABLE_FILE_SYSTEM for blackberry.

2012-03-25  Hayato Ito  <hayato@chromium.org>

        [Shadow DOM] Add Reified DOM Tree traversal internal APIs.
        https://bugs.webkit.org/show_bug.cgi?id=79197

        Reviewed by Dimitri Glazkov.

        Add internal APIs which can be used to traverse Reified DOM tree, which is
        a result of node distribution algorithm explained in Shadow DOM spec.
        https://dvcs.w3.org/hg/webcomponents/raw-file/tip/spec/shadow/index.html

        Every public functions defined in ReifiedTreeTraversal are static
        functions and are named in a similar way to ones defined in WebCore::Node class.
        The only difference is that ReifiedTreeTraversal APIs consider shadow
        hosts and also traverse nodes is Shadow DOM subtrees, crossing shadow's upper and lower boundary
        transparently.
