@@ -1,3 +1,12 @@
+2012-03-27  Ryosuke Niwa  <rniwa@webkit.org>
+
+        Perf-o-matic build fix.
+
+        * Websites/webkit-perf.appspot.com/controller.py:
+        (RunsChartHandler.post):
+        * Websites/webkit-perf.appspot.com/models.py:
+        (Runs.chart_params):
+
 2012-03-27  Dave Tu  <dtu@chromium.org>
 
         Show image diffs for gpu_tests on flakiness dashboard
